# src/main/kotlin/player/infrastructure/drive/adapter/rest/routes/player/PlayerDetails.kt
@@ -1,9 +1,9 @@
-package com.romina.player.infrastructure.adapters.driver.rest.routes.player
+package com.romina.player.infrastructure.drive.adapter.rest.routes.player
 
 import com.romina.player.application.domain.ports.`in`.GetPlayerDetailsUseCase
 import com.romina.player.application.domain.ports.`in`.PlayerDetailsQuery
-import com.romina.player.infrastructure.adapters.driver.rest.dto.toDTO
-import com.romina.player.infrastructure.adapters.driver.rest.getUUID
+import com.romina.player.infrastructure.drive.dto.toDTO
+import com.romina.player.infrastructure.drive.adapter.rest.getUUID
 import io.ktor.http.HttpStatusCode
 import io.ktor.server.response.respond
 import io.ktor.server.routing.Route
