# src/main/kotlin/player/infrastructure/drive/adapter/rest/routes/player/PlayerRoutes.kt
@@ -1,4 +1,4 @@
-package com.romina.player.infrastructure.adapters.driver.rest.routes.player
+package com.romina.player.infrastructure.drive.adapter.rest.routes.player
 
 import com.romina.player.application.domain.ports.`in`.AddCreatureToPlayerUseCase
 import com.romina.player.application.domain.ports.`in`.CreatePlayerUseCase
